correct wraping for pre

--- a/assets/remarkdown.css
+++ b/assets/remarkdown.css
@@ -306,7 +306,7 @@ hr {
 }
 
 .remarkdown pre {
-  white-space: normal;
+  white-space: pre-wrap;
 }
 
 .remarkdown.pre-tick pre::before,
